fix mail server missing column

--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -51,7 +51,7 @@
        <div>
 	
 		<% cache ("flickr_sidebar") do %>
-<%= render_flickr_sidebar_widget('138220357@N03') %>
+<%#= render_flickr_sidebar_widget('138220357@N03') %>
                                <% end %>
 
 
@@ -67,7 +67,7 @@
  <div>
 	
 		<% cache ("flickr_sidebar") do %>
-<%= render_flickr_sidebar_set('138220357@N03') %>
+<%#= render_flickr_sidebar_set('138220357@N03') %>
                                <% end %>
 
 
