--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,8 +1,4 @@
-<div>
-  <% flash.each do |key, value| %>
-    <div>
-      
-        <%= value %>
-    </div>
-  <% end %>
+<div class="container">
+  <%= link_to 'Back to Ideas', root_url, :class => "btn btn-primary btn-sm button active" %>
+ 
 </div>
