--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
 
               <li><%= link_to "Ideas", root_url(:anchor => "ideas") %></li>
               <li><%= link_to "Projects",   root_url(:anchor => "project") %></li>
-              <li><%= link_to "Contact",   new_contact_path %></li>
+              <li><%= link_to "Contact",   new_contact_path(:anchor => "contact") %></li>
               <% if logged_in? %>
               <li><%= link_to "Profile",   user_path(current_user, :anchor => "head") %></li>
               <% end %>
