--- a/app/views/flickr/_sidebar_set.html.erb
+++ b/app/views/flickr/_sidebar_set.html.erb
@@ -10,6 +10,8 @@
       </li>
     <% end -%>
   </ul>
+  <p align="right">British Columbia: Hope & Salt Spring Island.</p>
+
 </div>
 </div>
 </div>
