--- a/app/views/flickr/_sidebar_widget.html.erb
+++ b/app/views/flickr/_sidebar_widget.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 <div class="row">
 <div class="flickr">
+<p>//Discovering British Columbia//</p>
   <ul>
     <% photos.each do |row| -%>
       <li>
@@ -10,6 +11,7 @@
       </li>
     <% end -%>
   </ul>
+  <p align="right">//Town of Hope: mountains + rivers + lakes //</p>
 </div>
 </div>
 </div>
