--- a/app/views/layouts/_project.html.erb
+++ b/app/views/layouts/_project.html.erb
@@ -1,16 +1,36 @@
 <div class="container">
-<div class="row>"
+<div class="row">
 <div class="ribbon-project">
-	<div class="" style="width=50%">
+	<div>
 	<h0 name="project" id="project"></h0>
-	<p class="title-header">Project</p>
+	<p class="title-header">Projects</p>
 	</div>
-	<div style="width=50%">
-		<div>
-			<h4>1. Learning to edit and mix music</h4>
-				<%= link_to image_tag("instagram.png", alt: "Instagram", size: "25x25"),
-                'https://www.instagram.com/soniacaan/' %>
-		</div>
+
+<div class="col-md-12">
+		<ul style="list-style-type:none text-indent:none ">
+		<li><h4>Ideation Stage</h4></li>
+		<li><span class="glyphicon glyphicon-heart"></span>
+	Non-profit: Adventure + Career Mentoring + Network + Canadian Women</li>
+			
+
+		<li><span class="glyphicon glyphicon-heart"></span>
+	Non-profit: eCommerce + Beauty + Fashion + Fund Girls' Education + Meals</li>
+		</ul>
+
+		<ul style="list-style-type:none">
+		<li><h4>Testing Stage</h4></li>
+		<li><span class="glyphicon glyphicon-heart"></span>
+		Learning to edit and mix music</li>
+		<li>	<iframe width="80%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/250432407&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></li>
+		<li><%#= link_to image_tag("soundcloud.png", alt: "soundcloud", size: "45x45"),
+                'https://soundcloud.com/user-75447962' %>
+                </li>
+		</ul>	
+
+
+	</div>
+
+
 </div>
 </div>
 </div>
