--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -23,14 +23,19 @@
     <%= f.label :body %><br>
     <%= f.cktext_area :body, :ckeditor => {:language => 'us', :toolbar => 'pure'} %>
   </div>
+  <div>
+  <%#= f.label :type %>
+    <%#= f.select :micropost_type, Micropost.micropost_type.keys.to_a %>
+    
+  </div>
 
   <div>
   <button class="btn btn-primary btn-sm button active" type="submit">Create Idea</button>
+  <% end %>
   </div>
   <div>
   <%= link_to 'Back', microposts_path, :class => "btn btn-primary btn-sm active" %>
   </div>
-<% end %>
 </div>
 </div>
 
