--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,8 @@ $black-font: #000000;
 $grey-font: #C0C0C0;
 $title-font: #202020;
 $banner-font: #202020;
+$micro-link-title: #555555;
+$micro-link-title-hov: #777777; 
 
 
 /* links */
@@ -36,14 +38,8 @@ h0:before {
 }
 
 
-a:link, a:visited { 
-    color: (internal value);
-    cursor: auto;
-}
 
-a:link:active, a:visited:active { 
-    color: (internal value);
-}
+
 /* universal */
 
 .ribbon {
@@ -55,6 +51,7 @@ a:link:active, a:visited:active {
   display: block;
   padding-top: 20px;
   padding-bottom: 60px;
+  align: left;
 }
 
 button {
@@ -114,10 +111,21 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
-.custom-menu {
+ul.custom-menu {
   font-size: 18px;
+  padding-top: 10px;
+  padding-left: 10px;
+  align: left;
+ 
   }
 
+p.header-title {
+  font-size: 18px;
+  color: $grey-font;
+  padding-top: 20px;
+  padding-left: 40px;
+ 
+  }
 
 .banner{
   float: center;
@@ -130,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p.title-header {
-  font-size: 1.5em;
+  font-size: 1.2em;
   letter-spacing: 1px;
   line-height: 110%;
   margin-top: 40px;
@@ -141,33 +149,42 @@ p.title-header {
 }
 
 .title-banner {
-  font-size: 1.5em;
   letter-spacing: 1px;
   margin-top: 40px;
   margin-left: 5px;
   padding-left: 10px;
   text-align: left;
-
   color: $grey-font;
 }
 
 p.title-post {
-  font-size: 1.5em;
+  font-size: 1.2em;
    line-height: 110%;
   letter-spacing: 1px;
   margin-top: 40px;
   text-align: left;
-  color: $title-font;
+  color: $micro-link-title;
+  text-decoration: none;
 
-  :hover {
-    color: #fff;
+    :visited { 
+  color: $micro-link-title;
+  background: none;
+    text-decoration: none;
+    }
+  :hover { 
+    color: $micro-link-title-hov;
+    background: none;
+    outline: 0;
+    border: 0;
+    outline: 0;
+      text-decoration: none;
+    }
+:active { 
+  color: $micro-link-title;
+  background: none;
     text-decoration: none;
     }
 
-    :active {
-    color: #fff;
-    text-decoration: none;
-    }
 }
 
 .title-anchor {
@@ -253,9 +270,8 @@ p {
 
 #logo {
   float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
+  width: 50px;
+  height: 50px;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
@@ -266,6 +282,46 @@ p {
   color: #fff;
   text-decoration: none;
 }
+
+.logo {
+  display: block;
+  float: center;
+  padding-top: 5px; 
+    padding-left: 40px; 
+}
+
+p.dash{
+   display: block;
+  float: left;
+  padding-top: 0px; 
+  padding-left: 40px; 
+  font-weight: bold;
+  color: $grey-font;
+   font-size: 24px;
+
+
+
+
+}
+
+.img-circular{
+ width: 50px;
+  height: 50px;
+ background-size: cover;
+ display: block;
+ border-radius: 100px;
+ -webkit-border-radius: 100px;
+ -moz-border-radius: 100px;
+ alt: "home";
+}
+
+.img-circular:hover {
+  color: #fff;
+background-position: 0px -48px;
+  box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
+}
+
+
 
 p.frontHeader {
   color: $grey-font;
@@ -554,26 +610,45 @@ header {
   padding-left: 20px;
 }
 
-
-.social-share-button-facebook {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  background: #fff url(../images/facebookBW.png) no-repeat;
+a.social-buttons:hover{
+  
+  decoration: none;
 }
 
-.social-share-button-twitter {
+a.social-share-button-twitter {
   display: inline-block;
-  width: 16px;
-  height: 16px;
-  background: url(../i,ages/twitterBW.png);
+  width: 20px;
+  height: 20px;
+  background: url(image-path('twitter-square-logo1.png')) no-repeat;
 }
 
-.social-share-button-linkedin {
+a.social-share-button-facebook {
   display: inline-block;
-  width: 16px;
-  height: 16px;
-  background: url(../images/linkedinBW.png) no-repeat;
+  width: 20px;
+  height: 20px;
+  background: url(image-path('twitter-square-logo1.png')) no-repeat;
+}
+
+a.social-share-button-tumblr {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url(image-path('twitter-square-logo1.png')) no-repeat;
+}
+
+a.social-share-button-pinterest {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url(image-path('twitter-square-logo1.png')) no-repeat;
+}
+
+ul.header-share{
+  font-size: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
+  align: left;
+ 
 }
 
 .hidden { display: none; }
