views cleanup and header

--- a/app/views/static_pages/_project.html.erb
+++ b/app/views/static_pages/_project.html.erb
@@ -1,24 +1,31 @@
 <div class="container">
 <div class="row">
+<h0 name="project" id="project"></h0>
 <div class="ribbon-project">
 	<div>
-	<h0 name="project" id="project"></h0>
+	
 	<p class="title-header">Projects</p>
 	</div>
 
 <div class="col-md-12">
-		<ul style="list-style-type:none text-indent:none ">
+		<ul class="projects">
 		<li><h4>Ideation Stage</h4></li>
 		<li><span class="glyphicon glyphicon-heart"></span>
-	Non-profit: Adventure + Career Mentoring + Network + Canadian Women</li>
+	Non-profit: Outdoor adventure + Career Mentoring + Network + Canadian Women & Girls</li>
+
 			
 
 		<li><span class="glyphicon glyphicon-heart"></span>
 	Non-profit: eCommerce + Beauty + Fashion + Fund Girls' Education + Meals</li>
 		</ul>
 
-		<ul style="list-style-type:none">
-		<li><h4>Testing Stage</h4></li>
+		<ul class="projects">
+		<li><h4>Testing it out</h4></li>
+		<li><span class="glyphicon glyphicon-heart"></span>
+		ebook: Inspirational quotes set against photos of British Colombia</li>
+		<li> Quotes curated by my uncle who has a library of old books on philosophy.	
+                </li>
+		
 		<li><span class="glyphicon glyphicon-heart"></span>
 		Learning to edit and mix music</li>
 		<li>	<iframe width="80%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/250432407&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></li>
