--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,9 +20,14 @@ $micro-link-title-hov: #777777;
 
 #article{
   
-   
     background-color:#C0D6E4;
-    
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+#project{
+  
+    background-color:#C0D6E4;
     padding-bottom: 20px;
     padding-top: 20px;
 }
@@ -139,9 +144,10 @@ p.header-title {
 
 p.title-header {
   font-size: 1.2em;
+  font-weight: bold;
   letter-spacing: 1px;
   line-height: 110%;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-left: 5px;
   padding-left: 10px;
   text-align: left;
@@ -573,8 +579,8 @@ header {
 .flickr{
   
   display: block; 
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding-top: 40px;
+  padding-bottom: 0px;
   align: center
 
 }
@@ -615,40 +621,32 @@ a.social-buttons:hover{
   decoration: none;
 }
 
-a.social-share-button-twitter {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url(image-path('twitter-square-logo1.png')) no-repeat;
-}
-
-a.social-share-button-facebook {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url(image-path('twitter-square-logo1.png')) no-repeat;
-}
-
-a.social-share-button-tumblr {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url(image-path('twitter-square-logo1.png')) no-repeat;
-}
-
-a.social-share-button-pinterest {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url(image-path('twitter-square-logo1.png')) no-repeat;
-}
 
 ul.header-share{
   font-size: 10px;
   padding-top: 10px;
   padding-left: 10px;
+  padding-right: 5px;
   align: left;
  
+}
+
+ul.projects{
+  list-style-type: none;
+  text-indent: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  list-style:none;
+    padding-left:0;
+
+}
+
+ul.projects li{
+   text-indent: none;
+   padding-top: 5px;
+  padding-bottom: 5px;
+
+
 }
 
 .hidden { display: none; }
