--- a/app/views/flickr/_sidebar_set.html.erb
+++ b/app/views/flickr/_sidebar_set.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 <div class="row">
 <div class="flickr">
+ <p align="left">//Great outdoors are outside our doors in BC//</p>
   <ul>
     <% photos.each do |row| -%>
       <li>
@@ -10,7 +11,7 @@
       </li>
     <% end -%>
   </ul>
-  <p align="right">British Columbia: Hope & Salt Spring Island.</p>
+  <p align="right">//British Columbia: Hope & Salt Spring Island//</p>
 
 </div>
 </div>
