--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,12 +2,10 @@
  
 
   <div class="container">
-  <nav class="navbar navbar-fixed-top navbar-inverse">
-   <div class="col-md-2">
+  <div class="navbar navbar-fixed-top navbar-inverse">
+   <div class="col-sm-2">
       <div>
-                    <p class="header-title">Ideas Connect Us</p> 
-
-
+          <p class="header-title">Ideas Connect Us</p> 
       </div>
       <div class="logo">
       <%= link_to(image_tag("sonia4.png", :class => "img-circular", :alt => ".home."), root_url) %>
@@ -15,14 +13,29 @@
       </div>
       <div> <p class="dash">- - - .</p></div>
   </div>
-  <div class="col-md-5">
-    <div class="row">
-          <ul class="custom-menu title-banner invisible">Ideas Connect Us</ul> 
-    </div>
-    <div class="row">
-           <div class="navbar-inner">
-            <ul class="nav navbar-nav custom-menu">
+  <div class="col-sm-10">
+  <div class="row">
 
+          <div class="col-md-8">
+          <ul class="custom-menu title-banner invisible">Ideas Connect Us</ul> 
+          </div>
+          <div class="col-md-2"></div>
+  </div>
+   <div class="row">
+   <nav role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+ <!-- Collection of nav links, forms, and other content for toggling -->
+
+  <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav custom-menu">
               <li><%= link_to "Ideas", root_url(:anchor => "ideas") %></li>
               <li><%= link_to "Projects",   root_url(:anchor => "project") %></li>
               <li><%= link_to "Contact",   new_contact_path(:anchor => "contact") %></li>
@@ -30,17 +43,8 @@
               <li><%= link_to "Profile",   user_path(current_user, :anchor => "head") %></li>
               <% end %>
             </ul>
-            </div>
-    </div>
-  </div>
-  <div class="col-md-5">
-    <div class="row">
-          <ul class="custom-menu title-banner invisible">Ideas Connect Us</ul> 
-    </div>
-    <div class="row">
-           <div class="navbar-inner">
-            <ul class="nav navbar-nav header-share">
 
+    <ul class="nav navbar-nav header-share navbar-right">
               <li><a href="http://twitter.com/home?status=Ideas Connect Us. Share. Explore. <%= root_url %>" title="Share on Twitter"  target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
          <!-- Facebook -->
         <li><a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fcaan.herokuapp.com" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a></li>
@@ -49,12 +53,12 @@
         <!-- LinkedIn --> 
         <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//caan.herokuapp.com/&title=Ideas%20Connect%20Us.%20Share.%20Explore.&summary=&source=" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
 
-            </ul>
-            </div>
+     </ul>
     </div>
-  </div>
-
     </nav>
+    </div>
+    </div>
+    </div>
     </div>
     
 
