--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -4,19 +4,15 @@
 <div class="container">
 <div class="row">
  <div class="col-md-12">
-				
-				
-				
+				<h0 id="ideas" name="ideas"></h0>			
 		</div>
 </div>
-
-
 <div class="row">
 	    <div class="col-md-12">
 	    <% if admin? %>
 	    <%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active right-button" %>
 	    <% end %>
-			<h0 id="ideas" name="ideas"></h0>
+			
 			<p class="title-header">Ideas - ideas are empowered by teams, people who are driven by their passion. Technology can enable change, transform our world. Working with the right people, we can bring ideas to life. </p>
 		
 		</div>	
@@ -24,17 +20,12 @@
 	    		
 	    </div>
 </div>
- 
-  
-	
-
 	<span class="microposts">   
 
 
 	      <%= render @microposts %>
 
 	 </span>
- 
 
   <%= will_paginate @micropost %>
 </div>
@@ -45,32 +36,22 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-<div id="imageribbon">
        <div>
 	
 		<% cache ("flickr_sidebar") do %>
 <%= render_flickr_sidebar_widget('138220357@N03') %>
                                <% end %>
-
-
 		</div> 
-		
 
+<div id="project">
 
-<div>
-
-	<%= render 'layouts/project' %>
-
+	<%= render 'static_pages/project' %>
 </div>
  <div>
-	
 		<% cache ("flickr_sidebar") do %>
 <%= render_flickr_sidebar_set('138220357@N03') %>
                                <% end %>
-
-
 		</div> 
-</div>
 </div>
 </div>
 </div>
