--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -26,6 +26,14 @@
 		 <% end %>
 		 
 	</div>
+
+	<div>
+		
+		 <%= @micropost.post_type %>
+		
+		 
+	</div>
+
 	<div>
 	  <span class="body-post">
 	   <%= @micropost.body.html_safe %>
