--- a/app/views/static_pages/_project.html.erb
+++ b/app/views/static_pages/_project.html.erb
@@ -1,7 +1,8 @@
+<div id="project">
 <div class="container">
 <div class="row">
-<h0 name="project" id="project"></h0>
-<div class="ribbon-project">
+<h0 name="projects" id="projects"></h0>
+
 	<div>
 	
 	<p class="title-header">Projects</p>
@@ -9,7 +10,7 @@
 
 <div class="col-md-12">
 		<ul class="projects">
-		<li><h4>Ideation Stage</h4></li>
+		<li><h4>Ideation Stage sdssdds</h4></li>
 		<li><span class="glyphicon glyphicon-heart"></span>
 	Non-profit: Outdoor adventure + Career Mentoring + Network + Canadian Women & Girls</li>
 
@@ -41,3 +42,4 @@
 </div>
 </div>
 </div>
+
