--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
   <div class="row">
 
           <div class="col-md-8">
-          <ul class="custom-menu title-banner invisible">Ideas Connect Us</ul> 
+          <h1 class="invisible title-header">Ideas Connect Us</h1> 
           </div>
           <div class="col-md-2"></div>
   </div>
@@ -37,7 +37,7 @@
   <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav custom-menu">
               <li><%= link_to "Ideas", root_url(:anchor => "ideas") %></li>
-              <li><%= link_to "Projects",   root_url(:anchor => "project") %></li>
+              <li><%= link_to "Projects",   root_url(:anchor => "projects") %></li>
               <li><%= link_to "Contact",   new_contact_path(:anchor => "contact") %></li>
               <% if logged_in? %>
               <li><%= link_to "Profile",   user_path(current_user, :anchor => "head") %></li>
