--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -8,11 +8,14 @@
       </span>
       <table style="width:100%">
         <tr>
-          <td style="width:20%">
+           <% if micropost.picture? %>
+          <td id="photo" style="width:20%">
+         
           <span class="sm-logo">
                   <%= image_tag micropost.picture.url(:thumb) if micropost.picture? %>
           </span>
          </td>
+           <% end %>
           <td style="width:60%">
                <h5>
                 <%= micropost.body.truncate_words(40).html_safe %>
