cleanup and ckeditor

--- a/app/views/static_pages/_project.html.erb
+++ b/app/views/static_pages/_project.html.erb
@@ -10,7 +10,7 @@
 
 <div class="col-md-12">
 		<ul class="projects">
-		<li><h4>Ideation Stage sdssdds</h4></li>
+		<li><h4>Ideation Stage</h4></li>
 		<li><span class="glyphicon glyphicon-heart"></span>
 	Non-profit: Outdoor adventure + Career Mentoring + Network + Canadian Women & Girls</li>
 
