remove type_micro from view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,8 +144,9 @@ p.header-title {
   font-size: 18px;
   color: $black-font;
   padding-left: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
   
- 
   }
 
 
