add tmp file for carrierwave heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= yield(:title) %></title>
-  <meta name="Ideas" content="<%= content_for?(:description) ? yield(:description) : "Learn Rails" %>">
+  <meta name="Ideas" content="<%= content_for?(:description) ? yield(:description) : "Share Ideas" %>">
 
   <%= stylesheet_link_tag 'application', media: 'all',
                                            'data-turbolinks-track' => true %>
