--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -24,14 +24,8 @@
   	<div class="picture-post">
 		<% if @micropost.picture? %>
 		 <%= image_tag @micropost.picture.url %>
+		 <%= @micropost.picture.url %>
 		 <% end %>
-		 
-	</div>
-
-	<div>
-		
-		 <%= @micropost %>
-		
 		 
 	</div>
 
