--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -13,12 +13,14 @@
 	    <% if admin? %>
 	    <%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active right-button" %>
 	    <% end %>
-			
+	 		<div class="header-box">
 			<p class="title-header">Ideas</p>
 			<p class="blocked">ideas are empowered by teams, individuals who are driven by their passions. Technology can enable change and transform our world. Working with the right people, we can bring ideas to life. </p>	
+			</div>
 		</div>	
+
 	    <div class="col-md-12">
-	    		
+	    	
 	    </div>
 </div>
 	<span class="microposts">  
