--- a/app/views/static_pages/_project.html.erb
+++ b/app/views/static_pages/_project.html.erb
@@ -1,15 +1,16 @@
 <div id="project">
 <div class="container">
 <div class="row">
+<div class="col-md-12">
 <h0 name="projects" id="projects"></h0>
 
-	<div>
+	<div class="header-box">
 	
 	<p class="title-header">Projects</p>
 	</div>
 
 <div class="col-md-12">
-		<ul class="projects">
+		<ul class="projects body-box">
 		<li><h4>Ideation Stage</h4></li>
 		<li><span class="glyphicon glyphicon-heart"></span>
 	Non-profit: Outdoor adventure + Career Mentoring + Network + Canadian Women & Girls</li>
@@ -20,7 +21,7 @@
 	Non-profit: eCommerce + Beauty + Fashion + Fund Girls' Education + Meals</li>
 		</ul>
 
-		<ul class="projects">
+		<ul class="projects body-box">
 		<li><h4>Testing it out</h4></li>
 		<li><span class="glyphicon glyphicon-heart"></span>
 		ebook: Inspirational quotes set against photos of British Colombia</li>
@@ -39,6 +40,7 @@
 	</div>
 
 
+</div>
 </div>
 </div>
 </div>
