--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,22 +1,22 @@
 
 <div class="container">
 <div class="row">
-   
-  <div class="col-md-10">
-      <span>
+  <div class="col-md-10 ribbon body-box">
+     
+      <div>
          <p class="title-post"><%= link_to micropost.title, micropost_path(micropost, anchor: "head") %> </p>
-      </span>
-      <table style="width:100%">
-        <tr>
-           <% if micropost.picture? %>
-          <td id="photo" style="width:20%">
-         
-          <span class="sm-logo">
+      </div>
+      
+         <% if micropost.picture? %>
+          <div id="photo" class="col-md-3">
+
+          <div class="sm-logo">
                   <%= image_tag micropost.picture.url(:thumb) if micropost.picture? %>
-          </span>
-         </td>
+          </div>
+          </div>
            <% end %>
-          <td style="width:60%">
+          <div class="col-md-7">
+          
                <h5>
                 <%= micropost.body.truncate_words(40).html_safe %>
                 </h5>
@@ -31,13 +31,16 @@
                   <%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-primary btn-sm button active" %>
                   <% end %>
                   </h6>
-            </td>
-          </tr>
-         </table>
-      </div>
+           
+            </div>
+          
+          </div> 
+     
+      
      <div class="col-md-1">
      </div>
 </div>
 </div>
+
 
 
