--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -19,7 +19,10 @@
 	<%= social_share_button_tag(@micropost.title, :url => url_for(:only_path => false)) %>
 
 	</div>
-	
+	<div>
+		Type of Micro
+		<% @micropost.type_micro %>	
+	</div>
 			   
   	<div class="picture-post">
 		<% if @micropost.picture? %>
