--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <%= javascript_include_tag Ckeditor.cdn_url %>
     <%= render 'layouts/shim' %>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <%= favicon_link_tag(source="favicon.png") %>
 
 </head>
 <body>
