--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
       <%= link_to(image_tag("sonia4.png", :class => "img-circular", :alt => ".home."), root_url) %>
      
       </div>
-      <div> <p class="dash">- - - .</p></div>
+      <div> <p class="dash">- - - <p class="dot-color">. .</p></p></div>
   </div>
   <div class="col-sm-10">
   <div class="row">
