--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -251,7 +251,7 @@ p.title-header {
    color: $title-font;
    padding-top: 40px;
    padding-left: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 0px;
    align: left;
 
 }
@@ -367,10 +367,11 @@ p.title-comment {
 }
 
 p.title-idea {
+  display: block;
   font-size: 1.5em;
   font-weight: bold;
  line-height: 110%;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 20px;
   text-align: left;
   color: #000000;
