--- a/app/views/static_pages/_project.html.erb
+++ b/app/views/static_pages/_project.html.erb
@@ -1,14 +1,33 @@
+<% provide(:title, "Projects") %>
+<h0 id="projects" name="projects"></h0>
+	
 <div id="project">
 <div class="container">
 <div class="row">
+	
 <div class="col-md-12">
-<h0 name="projects" id="projects"></h0>
+	
+	
+
+	<h0 class="invisible">project</h0>
+	
+</div>
+</div>
+
+<div class="row">
+<div class="ribbon-project">
+<div class="col-md-12">
 
 	<div class="header-box">
+	<h0 class="invisible">project</h0>
 	
 	<p class="title-header">Projects</p>
 	</div>
+</div>
+</div>
+</div>
 
+<div class="row">
 <div class="col-md-12">
 		<ul class="projects body-box">
 		<li><h4>Ideation Stage</h4></li>
@@ -39,9 +58,9 @@
 
 	</div>
 
+</div>
 
 </div>
 </div>
-</div>
-</div>
+
 
