--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -111,7 +111,7 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 #article{
   
     background-color:#C0D6E4;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     padding-top: 20px;
 }
 
@@ -143,10 +143,14 @@ h0:before {
 }
 
 .ribbon-project {
-  display: block;
+
   padding-top: 20px;
-  padding-bottom: 60px;
-  align: left;
+  padding-bottom: 20px;
+}
+
+.ribbon-index {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 button {
@@ -159,10 +163,11 @@ button:hover, button:focus, button:active, button:target{
 
   }
 
-button-right {
+.button-right {
   
   display: block;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  align: left;
 
 }
 
@@ -227,7 +232,7 @@ p.header-title {
   font-size: 18px;
   color: $black-font;
   padding-left: 10px;
-  padding-top: 10px;
+  padding-top: 20px;
   padding-left: 10px;
   padding-bottom: 10px;
  line-height: 120%
