--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,20 +1,26 @@
 
 <% provide(:title, "Ideas") %>
-
+	<h0 id="ideas" name="ideas"></h0>	
 <div id="article">
 <div class="container">
 <div class="row">
  <div class="col-md-12">
-				<h0 id="ideas" name="ideas"></h0>			
+ 										
+
 </div>
 </div>
 <div class="row">
+<div class="ribbon-index">
 	    <div class="col-md-12">
 	    <% if admin? %>
-	    <div>
-	    <%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active right-button" %>
-	    <% end %>
+	    <div class="button-right">
+	    <%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active" %>
 	    </div>
+	    	<% else %>
+	    <div class="button-right">
+	    <%= link_to 'New Micropost', new_micropost_path(:anchor => "ideas"), :class => "btn btn-primary btn-sm active invisible" %>
+	    </div>
+	       <% end %>
 	 		<div class="header-box">
 			<p class="title-header">Ideas</p>
 			<p class="blocked">ideas are empowered by teams, individuals who are driven by their passions. Technology can enable change and transform our world. Working with the right people, we can bring ideas to life. </p>	
@@ -38,7 +44,7 @@
 </div>
 </div>
 </div>
-
+</div>
 
 
 
