--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,7 +2,11 @@
 
   <div class="col-md-12 ribbon">
   <div class="row">
-     <div class="col-md-12">
+    <div class="col-md-1">
+          <p class="invisible">Space</p>
+     </div>
+     
+     <div class="col-md-11">
      
          <p class="title-post"><%= link_to micropost.title, micropost_path(micropost, anchor: "head") %> </p>
       </div>
