--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,21 @@
 
   <div class="container">
   <div class="navbar navbar-fixed-top navbar-inverse">
-   <div class="col-sm-2">
+  
+  
+   
+   <nav role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+ 
+<div class="col-sm-2">
      
           <p class="header-title">Ideas Connect Us</p> 
       
@@ -16,25 +30,21 @@
   <div class="col-sm-10">
   <div class="row">
 
-          <div class="col-md-8">
-          <h1 class="invisible title-header">Ideas Connect Us</h1> 
+          <div class="col-sm-8">
+          <p class="invisible banner-fill">invisible</p> 
           </div>
-          <div class="col-md-2"></div>
+          <div class="col-sm-2">
+            
+          </div>
   </div>
-   <div class="row">
-   <nav role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
+
+
+
  <!-- Collection of nav links, forms, and other content for toggling -->
 
   <div id="navbarCollapse" class="collapse navbar-collapse">
+
+  <div class="row">
             <ul class="nav navbar-nav custom-menu">
               <li><%= link_to "Ideas", root_url(:anchor => "ideas") %></li>
               <li><%= link_to "Projects",   root_url(:anchor => "projects") %></li>
